# Herkansing-Software-engineering-Bert-Housen

./: .gitattributes  .gitignore  README.md  afspraken.md
Pitches/: Backlog.xlsx  (+1 more)
docs/: UC1.md  (+21 more)
frontend/: CMakeLists.txt  leerhulpmiddel.sln
frontend/leerhulpmiddel/: CMakeLists.txt  leerhulpmiddel.qrc  leerhulpmiddel.ui  leerhulpmiddel.vcxproj  leerhulpmiddel.vcxproj.filters
frontend/leerhulpmiddel/questionSets/: wiskunde.json
frontend/leerhulpmiddel/src/: fileManager.cpp  fileManager.h  main.cpp  questionType.h
frontend/leerhulpmiddel/src/Controller/: LoginController.cpp  LoginController.h  ShareController.cpp  ShareController.h  addFriendController.cpp  addFriendController.h  examinationController.cpp  examinationController.h  inboxController.cpp  inboxController.h  questioncontroller.cpp  questioncontroller.h  questionmanagercontroller.cpp  questionmanagercontroller.h  questionsetcontroller.cpp  questionsetcontroller.h  vakkenmanagercontroller.cpp  vakkenmanagercontroller.h
frontend/leerhulpmiddel/src/Exceptions/: EmptyFieldException.h  FolderQuestionSetMovedException.h  NoSavedSessionException.h  invalidtypeerror.cpp  invalidtypeerror.h  loadException.h  saveException.h  unzipException.h
frontend/leerhulpmiddel/src/View/: EditableLabel.h  ExamSelector.h  Overlay.h  QFlowLayout.cpp  QFlowLayout.h  ToastMessage.h  chooseQuestionView.cpp  chooseQuestionView.h  focusoutlineedit.h  leerhulpmiddelmainwindow.cpp  leerhulpmiddelmainwindow.h  pagination.cpp  pagination.h  style.h  toggleSwitch.cpp  toggleSwitch.h
frontend/src/: CMakeLists.txt  placeholder.txt
(+129 files in other folders)
